Fix dark mode not showing right

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ body {
     cursor: pointer;
 }
 
+.black-color {
+    color: black;
+}
+
 /* ==[ sankey chart ]========================================================================================= */
 
 .sankey-link {
